--- a/fetch-data.html
+++ b/fetch-data.html
@@ -1,37 +1,15 @@
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 20px;
-    background-color: #f4f4f4;
-}
-
-#content {
-    max-width: 600px;
-    margin: auto;
-    background: white;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-}
-
-h1 {
-    text-align: center;
-    color: #333;
-}
-
-ul {
-    list-style: none;
-    padding: 0;
-}
-
-li {
-    background-color: #eee;
-    margin: 8px 0;
-    padding: 12px;
-    border-radius: 4px;
-    transition: background-color 0.3s;
-}
-
-li:hover {
-    background-color: #ddd;
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>User Data Display</title>
+    <link rel="stylesheet" href="fetch-data.css">
+</head>
+<body>
+    <div id="content">
+        <h1>User List</h1>
+        <div id="api-data">Loading user data...</div>
+    </div>
+    <script src="fetch-data.js"></script>
+</body>
+</html>
